[gd_scene load_steps=42 format=3 uid="uid://cgroth3nseo6"]

[ext_resource type="Script" uid="uid://d2icxmhi5wfg5" path="res://Scripts/Skeleton/Nodes/Root.gd" id="1_thbo5"]
[ext_resource type="Script" uid="uid://dv70ovn5u08i2" path="res://Scripts/Level/BoidsCalculator.gd" id="2_ati64"]
[ext_resource type="Script" uid="uid://cwb2yuidg1nv5" path="res://Scripts/Skeleton/Nodes/GodotSteamAbstraction.gd" id="3_c684j"]
[ext_resource type="Script" uid="uid://eh80g6ou7x2q" path="res://Scripts/Skeleton/Nodes/SaveLoadFramework.gd" id="4_l11nu"]
[ext_resource type="Script" uid="uid://dlliifnia7sm4" path="res://Scripts/ResourceScripts/Misc/FilepathResource.gd" id="5_jvequ"]
[ext_resource type="Script" uid="uid://cwga2scp61606" path="res://Scripts/Skeleton/Nodes/MissionSystem.gd" id="6_pmicg"]
[ext_resource type="Script" uid="uid://clgd0ups3ekte" path="res://Scripts/ResourceScripts/Missions/Mission.gd" id="7_vxmb5"]
[ext_resource type="Resource" uid="uid://b41cmtc2q6li2" path="res://Scenes/Resource/Level/Mission1.tres" id="8_py4au"]
[ext_resource type="Script" uid="uid://duycl57xwmfpr" path="res://Scripts/ResourceScripts/Missions/MissionTree.gd" id="9_y8obd"]
[ext_resource type="Script" uid="uid://6ub1ahbtrw5b" path="res://Scripts/Skeleton/Nodes/GameTimeSystem.gd" id="10_5yeas"]
[ext_resource type="Script" uid="uid://bgbde4rlptnwx" path="res://Scripts/Objects/BoidsGroup.gd" id="10_n133v"]
[ext_resource type="Script" uid="uid://ctyabps1pdr5y" path="res://Scripts/Skeleton/Nodes/DiscordRpc.gd" id="11_bhkpb"]
[ext_resource type="Script" uid="uid://dkccamrp2323g" path="res://Scenes/TSCN/godotisreallyspedihateprogrammingsomeonehelpmepleaseongod_iwonderwhatthiswillloklikewhenwedothegitvisualizationthingitwillprobabolylooksocookedlowkey.gd" id="12_c76v7"]
[ext_resource type="Theme" uid="uid://b8bvv1n5midlh" path="res://Scenes/Resource/UI/MainTheme.tres" id="13_wogkx"]
[ext_resource type="Shader" uid="uid://jjrct8kg35ci" path="res://Scripts/GLSL/GDShader/OceanDepthShader.gdshader" id="14_41cf3"]
[ext_resource type="Script" uid="uid://cr8brelxptd70" path="res://Scripts/UI/KeybindButtonHandler.gd" id="14_qt6oy"]
[ext_resource type="Script" uid="uid://6t41dstdgs6k" path="res://Scripts/Skeleton/Nodes/MainMenu.gd" id="15_5virq"]
[ext_resource type="FontFile" uid="uid://b8shwbf3tge0e" path="res://Assets/Fonts/Michroma/Michroma-Regular.ttf" id="16_nfklf"]
[ext_resource type="PackedScene" uid="uid://co07maqfriti4" path="res://Scenes/TSCN/Entities/NPCS/Boid.tscn" id="17_g72ff"]
[ext_resource type="Script" uid="uid://s4npen7ydnt2" path="res://Scripts/UI/Ingame/MinimalChat.gd" id="18_al4tj"]
[ext_resource type="Script" uid="uid://bcfo5ahloonou" path="res://Scripts/ResourceScripts/Misc/UIDContainer.gd" id="18_vsi4y"]
[ext_resource type="Script" uid="uid://b4d236x1wwn5k" path="res://Scripts/UI/sliderIsStupid.gd" id="20_8vvda"]
[ext_resource type="Script" uid="uid://dku55y4bp1fny" path="res://Scripts/Skeleton/Nodes/KeypressHandler.gd" id="20_kh2s0"]
[ext_resource type="Texture2D" uid="uid://cqx2208sneqm4" path="res://Assets/Art/UI/arrow.svg" id="21_eg08b"]
[ext_resource type="Texture2D" uid="uid://cdbh2li6uk2l6" path="res://Assets/Art/Misc/icon.svg" id="21_stqyc"]
[ext_resource type="Script" uid="uid://d4bbjhr8uciri" path="res://Scripts/Skeleton/Nodes/PerformancePrompt.gd" id="22_3oc7k"]
[ext_resource type="Script" uid="uid://dv2kwfcqucrrb" path="res://Scenes/TSCN/BrightnessModulate.gd" id="22_41cf3"]
[ext_resource type="Script" uid="uid://k5m6873n63pf" path="res://Scripts/UI/DialogHandler.gd" id="23_1chc7"]
[ext_resource type="PackedScene" uid="uid://bp2ach8thhbsd" path="res://Scenes/TSCN/UI/FakeButton.tscn" id="24_wosnj"]
[ext_resource type="Script" uid="uid://d0u6amg8og288" path="res://Scripts/UI/UiGenerator.gd" id="25_w4o83"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_v8psd"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_bpaox"]

[sub_resource type="Resource" id="Resource_ur184"]
script = ExtResource("5_jvequ")
file = "uid://dh0cluhw5hbar"

[sub_resource type="Resource" id="Resource_wq34i"]
script = ExtResource("5_jvequ")
file = "res://Scenes/TSCN/Levels/Playable/ResearchStation.tscn"

[sub_resource type="Resource" id="Resource_1tmkv"]
script = ExtResource("9_y8obd")
missions = Array[ExtResource("7_vxmb5")]([ExtResource("8_py4au")])

[sub_resource type="Resource" id="Resource_wiowl"]
resource_local_to_scene = true
script = ExtResource("18_vsi4y")
uid = 1501

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_o714b"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bhkpb"]
load_path = "res://.godot/imported/OceanDepthTextureToBlack.png-5e1dd40c6ff283288799a66678ca82b9.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_41cf3"]
shader = ExtResource("14_41cf3")
shader_parameter/water_col = Vector4(0.05, 0.05, 0.2, 1)
shader_parameter/shallow_water_col = Vector4(0, 0.05, 0.01, 1)
shader_parameter/depth_color_tex = SubResource("CompressedTexture2D_bhkpb")
shader_parameter/always_top = false
shader_parameter/blend_alpha = false
shader_parameter/max_alpha = 0.9
shader_parameter/height = 1.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lb45j"]
load_path = "res://.godot/imported/OceanDepthTextureToBlack.png-5e1dd40c6ff283288799a66678ca82b9.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1f6oh"]
shader = ExtResource("14_41cf3")
shader_parameter/water_col = Vector4(0.05, 0.05, 0.2, 1)
shader_parameter/shallow_water_col = Vector4(0, 0.05, 0.01, 1)
shader_parameter/depth_color_tex = SubResource("CompressedTexture2D_lb45j")
shader_parameter/always_top = false
shader_parameter/blend_alpha = false
shader_parameter/max_alpha = 1.0
shader_parameter/height = 1.0

[node name="Root" type="Node" node_paths=PackedStringArray("brightness_modulate", "KeyactionHandler")]
script = ExtResource("1_thbo5")
verbose_debug = true
super_efficient_auto_enable_maximum = 25
brightness_modulate = NodePath("Game/GameContainer/BrightnessModulate")
game_skeleton_node = NodePath("Skeleton")
ui_root_node = NodePath("UI")
game_root_node = NodePath("Game")
dialog_text_node = NodePath("Game/GameUIOverlay/DialogTextureBG")
KeyactionHandler = NodePath("Game/KeyActionHandler")

[node name="BoidsCalculator" type="Node" parent="."]
script = ExtResource("2_ati64")

[node name="Skeleton" type="Node" parent="."]

[node name="GodotSteamAbstraction" type="Node" parent="Skeleton" node_paths=PackedStringArray("local_player", "networked_player")]
script = ExtResource("3_c684j")
local_player = NodePath("LocalPlayer")
networked_player = NodePath("NetworkedPlayer")

[node name="LocalPlayer" type="AudioStreamPlayer" parent="Skeleton/GodotSteamAbstraction"]
stream = SubResource("AudioStreamGenerator_v8psd")

[node name="NetworkedPlayer" type="AudioStreamPlayer" parent="Skeleton/GodotSteamAbstraction"]
stream = SubResource("AudioStreamGenerator_bpaox")

[node name="SaveLoadFramework" type="Node" parent="Skeleton" node_paths=PackedStringArray("game_container")]
script = ExtResource("4_l11nu")
game_container = NodePath("../../Game/GameContainer")
ui_root_node_path = NodePath("../../UI")
level_list = Array[ExtResource("5_jvequ")]([SubResource("Resource_ur184")])
default_level = SubResource("Resource_wq34i")

[node name="MissionSystem" type="Node" parent="Skeleton"]
script = ExtResource("6_pmicg")
default_mission_tree = SubResource("Resource_1tmkv")

[node name="GameTimeSystem" type="Node" parent="Skeleton"]
script = ExtResource("10_5yeas")
seconds_per_ten_minutes = 1

[node name="DiscordRPC" type="Node" parent="Skeleton"]
script = ExtResource("11_bhkpb")

[node name="UI" type="Container" parent="." node_paths=PackedStringArray("BrightnessSlider", "PerformanceButton", "SoundSlider")]
process_mode = 3
z_index = 11
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
script = ExtResource("12_c76v7")
BrightnessSlider = NodePath("MenuSettings/HBoxContainer/VBoxContainer/VBoxContainer/BrightnessSlider")
PerformanceButton = NodePath("MenuSettings/HBoxContainer/VBoxContainer/HBoxContainer/PerformanceModeButton")
SoundSlider = NodePath("MenuSettings/SoundSubMenu/HBoxContainer/VBoxContainer/MasterVolumeSlider")

[node name="MenuSettings" type="Container" parent="UI" node_paths=PackedStringArray("BrightnessSlider", "PerformanceButton", "SoundSlider")]
process_mode = 3
z_index = 22
layout_mode = 2
mouse_filter = 2
script = ExtResource("12_c76v7")
BrightnessSlider = NodePath("HBoxContainer/VBoxContainer/VBoxContainer/BrightnessSlider")
PerformanceButton = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/PerformanceModeButton")
SoundSlider = NodePath("SoundSubMenu/HBoxContainer/VBoxContainer/MasterVolumeSlider")

[node name="BackButton" type="TextureButton" parent="UI/MenuSettings"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("21_eg08b")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MenuSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 11.8
mouse_filter = 2
alignment = 1

[node name="KeybindButton" type="Button" parent="UI/MenuSettings/HBoxContainer/VBoxContainer"]
z_index = 3
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 53
text = "Edit Keybinds"

[node name="SoundButton" type="Button" parent="UI/MenuSettings/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 46
action_mode = 0
text = "Sound Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MenuSettings/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/MenuSettings/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 34
text = "Efficiency Mode"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="PerformanceModeButton" type="Button" parent="UI/MenuSettings/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Turn On"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuSettings/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/MenuSettings/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
text = "Game Brightness"
fit_content = true
scroll_active = false

[node name="BrightnessSlider" type="HSlider" parent="UI/MenuSettings/HBoxContainer/VBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
value = 100.0
script = ExtResource("20_8vvda")

[node name="Background" type="ColorRect" parent="UI/MenuSettings"]
visible = false
z_index = -1
layout_mode = 2
mouse_filter = 2
color = Color(0.262932, 0.262932, 0.262932, 1)

[node name="SoundSubMenu" type="Control" parent="UI/MenuSettings"]
visible = false
z_index = 8
layout_mode = 2

[node name="Background" type="ColorRect" parent="UI/MenuSettings/SoundSubMenu"]
layout_mode = 0
offset_right = 1941.0
offset_bottom = 1117.0
mouse_filter = 2
color = Color(0.262745, 0.262745, 0.262745, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MenuSettings/SoundSubMenu"]
layout_mode = 0
offset_right = 1933.0
offset_bottom = 1111.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuSettings/SoundSubMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/MenuSettings/SoundSubMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 36
text = "Overall Volume"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="MasterVolumeSlider" type="HSlider" parent="UI/MenuSettings/SoundSubMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("20_8vvda")

[node name="BackButton" type="TextureButton" parent="UI/MenuSettings/SoundSubMenu"]
z_index = 14
z_as_relative = false
layout_mode = 0
offset_left = 76.0
offset_top = 52.0
offset_right = 289.0
offset_bottom = 154.0
scale = Vector2(0.5, 0.5)
action_mode = 0
texture_normal = ExtResource("21_eg08b")

[node name="BoidsGroup" type="Node" parent="UI" node_paths=PackedStringArray("boids_scene")]
script = ExtResource("10_n133v")
num_boids = 2500
spawn_position_node_path = NodePath("../Node2D")
boids_scene = NodePath("../Boid")
spawn_variation = 300.0

[node name="TemplateButton" type="Button" parent="UI"]
layout_mode = 2
theme = ExtResource("13_wogkx")
text = "Stylize this button!"
script = ExtResource("14_qt6oy")
metadata/key_number = 0
metadata/action = ""

[node name="MainMenu" type="Control" parent="UI"]
z_index = 9
layout_mode = 2
script = ExtResource("15_5virq")

[node name="GameTitle" type="Label" parent="UI/MainMenu"]
modulate = Color(1, 1, 1, 0.207843)
layout_mode = 0
offset_top = 73.0
offset_right = 1921.0
offset_bottom = 205.0
theme = ExtResource("13_wogkx")
theme_override_fonts/font = ExtResource("16_nfklf")
theme_override_font_sizes/font_size = 96
text = "Subsurface Tension"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI/MainMenu"]
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 824.0
offset_top = 318.0
offset_right = 1081.0
offset_bottom = 392.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="MultiplayerButton" type="Button" parent="UI/MainMenu"]
visible = false
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 688.0
offset_top = 318.0
offset_right = 945.0
offset_bottom = 392.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Multiplayer"

[node name="SingleplayerButton" type="Button" parent="UI/MainMenu"]
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 960.0
offset_top = 318.0
offset_right = 1217.0
offset_bottom = 392.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Singleplayer"

[node name="MultiplayerJoinButton" type="Button" parent="UI/MainMenu"]
visible = false
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 688.0
offset_top = 318.0
offset_right = 945.0
offset_bottom = 392.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Join
"

[node name="MultiplayerHostButton" type="Button" parent="UI/MainMenu"]
visible = false
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 960.0
offset_top = 318.0
offset_right = 1217.0
offset_bottom = 392.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Host"

[node name="MultiplayerJoinGameButton" type="Button" parent="UI/MainMenu"]
visible = false
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 960.0
offset_top = 318.0
offset_right = 1217.0
offset_bottom = 392.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Join
"

[node name="MultiplayerHostGameButton" type="Button" parent="UI/MainMenu"]
visible = false
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 960.0
offset_top = 318.0
offset_right = 1217.0
offset_bottom = 392.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Host"

[node name="SettingsButton" type="Button" parent="UI/MainMenu"]
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 824.0
offset_top = 414.0
offset_right = 1081.0
offset_bottom = 488.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Settings
"

[node name="QuitButton" type="Button" parent="UI/MainMenu"]
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 0
offset_left = 824.0
offset_top = 510.0
offset_right = 1081.0
offset_bottom = 584.0
theme = ExtResource("13_wogkx")
theme_override_font_sizes/font_size = 36
text = "Quit"

[node name="LobbyNameInput" type="LineEdit" parent="UI/MainMenu"]
visible = false
layout_mode = 0
offset_left = 688.0
offset_top = 318.0
offset_right = 945.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 36
placeholder_text = "Lobby name"
alignment = 1

[node name="MultiplayerStatus" type="Label" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 824.0
offset_top = 595.0
offset_right = 1080.0
offset_bottom = 618.0
horizontal_alignment = 1

[node name="Members" type="RichTextLabel" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 825.0
offset_top = 623.0
offset_right = 1081.0
offset_bottom = 766.0

[node name="MinimalChat" type="PanelContainer" parent="UI/MainMenu" node_paths=PackedStringArray("text")]
layout_mode = 0
offset_left = 1102.0
offset_top = 318.0
offset_right = 1446.0
offset_bottom = 584.0
script = ExtResource("18_al4tj")
text = NodePath("RichTextLabel")

[node name="RichTextLabel" type="RichTextLabel" parent="UI/MainMenu/MinimalChat"]
layout_mode = 2
bbcode_enabled = true

[node name="Boid" parent="UI" instance=ExtResource("17_g72ff")]
modulate = Color(0.704, 0.771, 0.885, 0.536)
z_index = -1
position = Vector2(-1103, 414)
uid = SubResource("Resource_wiowl")

[node name="BoidComponent" parent="UI/Boid" index="1"]
view_dist = 200.0
protected_dist = 20.0
avoid_factor = 1.0
turn_factor = 3.5
max_speed = 4.0
min_speed = 4.0
boid_colors = Array[Color]([Color(0.92, 1, 1, 1), Color(1, 0.89, 1, 1), Color(0.69984, 0.72, 0.6984, 1)])

[node name="Node2D" type="Node2D" parent="UI"]
position = Vector2(-1104, 400)

[node name="StaticBody2D" type="StaticBody2D" parent="UI"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UI/StaticBody2D"]
position = Vector2(-1086, -586)
scale = Vector2(2, 2)
polygon = PackedVector2Array(88, 1035, 214, 1069, 1582, 1057, 1739, 1030, 1833, 986, 1877, 886, 1915, 722, 1911.32, 560.154, 1688.5, 502.5, 1908.94, 455.29, 1905, 282, 1878, 157, 1828, 76, 1731, 49, 1606, 20, 1030.81, 16.6967, 929, 197, 833.158, 15.5616, 213, 12, 122, 18, 54, 52, 12, 111, 42.1429, 310.714, -195.5, 224.5, -421.5, 31.5, -782, 85, -956.5, 207.5, -951.5, 575, -746, 770, -421.5, 746, -209, 682, -41.99, 643.735, 51, 693.5, 86, 1048, 48, 1137, -983.571, 933.571, -1129.29, 250, -770, -143, -71, -40, 2001, -23, 1980, 1192, 51, 1137)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="UI/StaticBody2D"]
position = Vector2(-242, -58)
polygon = PackedVector2Array(-47, 440, -206, 192, -720, 460, -638.006, 492.318, -139, 689)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="UI"]

[node name="Game" type="Node" parent="."]

[node name="KeyActionHandler" type="Node2D" parent="Game"]
visible = false
script = ExtResource("20_kh2s0")

[node name="GameContainer" type="Node" parent="Game"]

[node name="BrightnessModulate" type="CanvasModulate" parent="Game/GameContainer"]
script = ExtResource("22_41cf3")

[node name="GameUIOverlay" type="Control" parent="Game"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PerformancePrompt" type="TextureRect" parent="Game/GameUIOverlay"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 410.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("21_stqyc")
script = ExtResource("22_3oc7k")
notif_bar_speed = 0.4

[node name="RichTextLabel" type="RichTextLabel" parent="Game/GameUIOverlay/PerformancePrompt"]
layout_mode = 0
offset_left = 138.0
offset_top = 4.0
offset_right = 888.0
offset_bottom = 224.0
theme_override_font_sizes/normal_font_size = 37
text = "Your game appears to be running at a less-than-optimal Framerate, so performance mode has been automatically turned on..."

[node name="NotifBar" type="ColorRect" parent="Game/GameUIOverlay/PerformancePrompt"]
layout_mode = 0
offset_left = 44.0
offset_top = 368.0
offset_right = 988.0
offset_bottom = 408.0

[node name="DialogTextureBG" type="TextureRect" parent="Game/GameUIOverlay" node_paths=PackedStringArray("text_node")]
visible = false
layout_mode = 0
offset_left = 677.0
offset_top = 758.0
offset_right = 1235.0
offset_bottom = 923.0
texture = SubResource("PlaceholderTexture2D_o714b")
script = ExtResource("23_1chc7")
response_button_one = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ResponseButtonOne")
response_button_two = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ResponseButtonTwo")
response_button_three = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ResponseButtonThree")
response_button_four = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ResponseButtonFour")
text_node = NodePath("VBoxContainer/DialogTextLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="Game/GameUIOverlay/DialogTextureBG"]
layout_mode = 0
offset_left = 30.0
offset_right = 517.0
offset_bottom = 160.0

[node name="DialogTextLabel" type="RichTextLabel" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "eeeeeeeeee"

[node name="HBoxContainer" type="HBoxContainer" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResponseButtonOne" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("24_wosnj")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResponseButtonTwo" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("24_wosnj")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResponseButtonThree" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("24_wosnj")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResponseButtonFour" parent="Game/GameUIOverlay/DialogTextureBG/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("24_wosnj")]
layout_mode = 2
size_flags_horizontal = 3

[node name="UIGenerator" type="Node2D" parent="Game/GameUIOverlay" node_paths=PackedStringArray("button_template")]
visible = false
script = ExtResource("25_w4o83")
button_template = NodePath("../../../UI/TemplateButton")

[node name="MousePositionGetter" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_41cf3")
offset_right = 1923.0
offset_bottom = 1087.0
mouse_filter = 2
color = Color(0.012, 0.012, 0.09, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1f6oh")
offset_right = 1923.0
offset_bottom = 1087.0
mouse_filter = 2
color = Color(0.0117647, 0.0117647, 0.0901961, 0)

[connection signal="button_up" from="UI/MenuSettings/BackButton" to="UI/MenuSettings" method="_back_button_pressed"]
[connection signal="button_up" from="UI/TemplateButton" to="UI/TemplateButton" method="_on_button_up"]
[connection signal="button_up" from="UI/MainMenu/StartButton" to="UI/MainMenu" method="_on_start_button_button_up"]
[connection signal="button_up" from="UI/MainMenu/MultiplayerButton" to="UI/MainMenu" method="_on_multiplayer_button_button_up"]
[connection signal="button_up" from="UI/MainMenu/SingleplayerButton" to="UI/MainMenu" method="_on_singleplayer_button_button_up"]
[connection signal="button_up" from="UI/MainMenu/MultiplayerJoinButton" to="UI/MainMenu" method="_on_multiplayer_join_button_button_up"]
[connection signal="button_up" from="UI/MainMenu/MultiplayerHostButton" to="UI/MainMenu" method="_on_multiplayer_host_button_button_up"]
[connection signal="button_up" from="UI/MainMenu/MultiplayerJoinGameButton" to="UI/MainMenu" method="_on_multiplayer_join_game_button_button_up"]
[connection signal="button_up" from="UI/MainMenu/MultiplayerHostGameButton" to="UI/MainMenu" method="_on_multiplayer_host_game_button_button_up"]
[connection signal="button_up" from="UI/MainMenu/SettingsButton" to="UI/MainMenu" method="_on_settings_button_up"]
[connection signal="button_up" from="UI/MainMenu/QuitButton" to="UI/MainMenu" method="_on_quit_button_button_up"]

[editable path="UI/Boid"]
